--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <div class="projects">
-  <ol class="bibliography">
+  <ul class="bibliography">
     <li>
       <div class="pub-row" style="display: flex; align-items: center;">
         <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
@@ -115,5 +115,5 @@ author_profile: true
       </div>
     </li>
 
-  </ol>
+  </ul>
 </div>
