--- a/_pages/global.html
+++ b/_pages/global.html
@@ -5,35 +5,62 @@ permalink: /global/
 author_profile: true
 ---
 
+<p><strong>Motivated by a deep passion for global issues, I actively participate in international dialogues, conferences, and symposiums to contribute to and learn from the global community on topics of innovation, sustainability, and leadership.</strong></p>
+
 {% include base_path %}
 
-<div class="portfolio-grid">
-  <div class="portfolio-item">
-    <img src="/path/to/your/image1.jpg" alt="Project 1 Image" class="portfolio-image">
-    <p><strong>Project 1 Title</strong></p>
-    <p>Short description of Project 1.</p>
-  </div>
-
-  <div class="portfolio-item">
-    <img src="/path/to/your/image2.jpg" alt="Project 2 Image" class="portfolio-image">
-    <p><strong>Project 2 Title</strong></p>
-    <p>Short description of Project 2.</p>
+<!-- Program 1: University of Auckland -->
+<div class="program-section">
+  <h3>Academic Exchange to University of Auckland</h3>
+  <p><em>Auckland, New Zealand</em><br>Nov, 2019</p>
+  <div class="program-images">
+    <div class="image-item">
+      <img src="/images/UniversityofAuckland-1.jpg" alt="University of Auckland Image 1" class="program-image">
+      <p>Short description of image 1.</p>
+    </div>
+    <div class="image-item">
+      <img src="/images/UniversityofAuckland-2.jpg" alt="University of Auckland Image 2" class="program-image">
+      <p>Short description of image 2.</p>
+    </div>
   </div>
 </div>
 
+<!-- Add more programs following the same structure -->
+<!-- Program 2 -->
+<div class="program-section">
+  <h3>Attending 1st Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology</h3>
+  <p><em>Hong Kong</em><br>July, 2023</p>
+  <div class="program-images">
+    <div class="image-item">
+      <img src="/images/HKUST-1.jpg" alt="HKUST Bootcamp Image 1" class="program-image">
+      <p>Short description of image 1.</p>
+    </div>
+    <div class="image-item">
+      <img src="/images/HKUST-2.jpg" alt="HKUST Bootcamp Image 2" class="program-image">
+      <p>Short description of image 2.</p>
+    </div>
+  </div>
+</div>
+
+<!-- Continue for other programs -->
+
 <style>
-  .portfolio-grid {
+  .program-section {
+    margin-bottom: 40px;
+  }
+
+  .program-images {
     display: flex;
     gap: 20px;
     justify-content: space-between;
   }
-  
-  .portfolio-item {
+
+  .image-item {
     flex: 1;
     text-align: center;
   }
-  
-  .portfolio-image {
+
+  .program-image {
     width: 100%;
     max-width: 400px;
     height: auto;
