--- a/_pages/global.html
+++ b/_pages/global.html
@@ -9,6 +9,21 @@ author_profile: true
 
 {% include base_path %}
 
+<div class="program-section">
+  <h3>Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology (HKUST)</h3>
+  <p><em>Hong Kong</em><br>July, 2023</p>
+  <div class="program-images">
+    <div class="image-item">
+      <img src="/images/HKUST-1.jpg" alt="HKUST Bootcamp Image 1" class="program-image">
+      <p>Short description of image 1.</p>
+    </div>
+    <div class="image-item">
+      <img src="/images/HKUST-2.jpg" alt="HKUST Bootcamp Image 2" class="program-image">
+      <p>Short description of image 2.</p>
+    </div>
+  </div>
+</div>
+
 <!-- Program 1: University of Auckland -->
 <div class="program-section">
   <h3>Academic Exchange to University of Auckland</h3>
@@ -28,7 +43,7 @@ author_profile: true
 <!-- Add more programs following the same structure -->
 <!-- Program 2 -->
 <div class="program-section">
-  <h3>Attending 1st Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology</h3>
+  <h3>Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology (HKUST)</h3>
   <p><em>Hong Kong</em><br>July, 2023</p>
   <div class="program-images">
     <div class="image-item">
