--- a/_pages/global.html
+++ b/_pages/global.html
@@ -5,129 +5,106 @@ permalink: /global/
 author_profile: true
 ---
 
-<p><strong>Motivated by a deep passion for global issues, I actively engage in various international dialogues, conferences, and symposiums, contributing to and learning from the global community on topics of innovation, sustainability, and leadership.</strong></p>
+{% include base_path %}
 
-<div class="global-engagement">
-  
-  <!-- Program 1: TUB and Fraunhofer IPK -->
-  <h3>Academic Exchange to Institute of Machine Tools and Factory Management (IWF), Technische Universität Berlin (TUB) and Fraunhofer IPK</h3>
-  <p style="float: right;">Berlin, Germany<br>Aug, 2024</p>
-  <p>This exchange program allowed me to learn much about advanced manufacturing techniques, such as additive manufacturing, robotic machining error compensation, and spindle heat error compensation. I gained insight into Germany’s industrial excellence and academic prowess.</p>
-  <div class="program-images">
-    <div class="image-item">
-      <img src="/images/TUB-1.jpg" alt="TUB Image 1" class="program-image">
-      <p>Description for image 1.</p>
+<div class="global-grid">
+  <div class="program">
+    <h3>Academic Exchange to Institute of Machine Tools and Factory Management (IWF), Technische Universität Berlin (TUB) and Fraunhofer IPK</h3>
+    <p>Location: Berlin, Germany</p>
+    <p>Date: Aug, 2024</p>
+    <p>Feeling: Learned about advanced manufacturing techniques such as additive manufacturing and robotic machining, and gained insight into Germany’s industrial and academic landscape.</p>
+    <div class="image-row">
+      <img src="/images/TUB-1.jpg" alt="TUB Image 1">
+      <img src="/images/TUB-2.jpg" alt="TUB Image 2">
     </div>
-    <div class="image-item">
-      <img src="/images/TUB-2.jpg" alt="TUB Image 2" class="program-image">
-      <p>Description for image 2.</p>
-    </div>
+    <p>Description 1</p>
+    <p>Description 2</p>
   </div>
 
-  <!-- Program 2: Yenching Global Symposium 2024 -->
-  <h3>Delegate at Yenching Global Symposium 2024 (YGS 2024)</h3>
-  <p style="float: right;">Beijing, China<br>Apr, 2024</p>
-  <p>This symposium focused on the theme “Equilibrium: Our World in Balance,” where we discussed climate change, technological innovation, and the role of local contexts in shaping global solutions. The experience broadened my understanding of sustainable and inclusive futures.</p>
-  <div class="program-images">
-    <div class="image-item">
-      <img src="/images/YGS-1.jpg" alt="YGS 2024 Image 1" class="program-image">
-      <p>Description for image 1.</p>
+  <div class="program">
+    <h3>Delegate at Yenching Global Symposium 2024 (YGS 2024)</h3>
+    <p>Location: Beijing, China</p>
+    <p>Date: Apr, 2024</p>
+    <p>Feeling: Discussed global issues such as climate change and technological innovation, focusing on sustainable futures and inclusive development.</p>
+    <div class="image-row">
+      <img src="/images/YGS-1.jpg" alt="YGS Image 1">
+      <img src="/images/YGS-2.jpg" alt="YGS Image 2">
     </div>
-    <div class="image-item">
-      <img src="/images/YGS-2.jpg" alt="YGS 2024 Image 2" class="program-image">
-      <p>Description for image 2.</p>
-    </div>
+    <p>Description 1</p>
+    <p>Description 2</p>
   </div>
 
-  <!-- Program 3: Global Youth Conference Dubai 2023 -->
-  <h3>Delegate at Global Youth Conference Dubai 2023</h3>
-  <p style="float: right;">Dubai, UAE<br>Dec, 2023</p>
-  <p>We had a wonderful discussion under the theme “Empowering Youth Leadership for Climate Action: Co-design, Collaborate, Co-implement,” which fueled my motivation for leadership in climate action.</p>
-  <div class="program-images">
-    <div class="image-item">
-      <img src="/images/Dubai-1.jpg" alt="Dubai Image 1" class="program-image">
-      <p>Description for image 1.</p>
+  <div class="program">
+    <h3>Delegate at Global Youth Conference Dubai 2023</h3>
+    <p>Location: Dubai, UAE</p>
+    <p>Date: Dec, 2023</p>
+    <p>Feeling: Engaged in inspiring discussions on youth leadership for climate action with global peers.</p>
+    <div class="image-row">
+      <img src="/images/Dubai-1.jpg" alt="Dubai Image 1">
+      <img src="/images/Dubai-2.jpg" alt="Dubai Image 2">
     </div>
-    <div class="image-item">
-      <img src="/images/Dubai-2.jpg" alt="Dubai Image 2" class="program-image">
-      <p>Description for image 2.</p>
-    </div>
+    <p>Description 1</p>
+    <p>Description 2</p>
   </div>
 
-  <!-- Program 4: 1st Tsinghua Global Youth Dialogue -->
-  <h3>Core-organizer at 1st Tsinghua Global Youth Dialogue</h3>
-  <p style="float: right;">Shenzhen-Chengdu-Beijing, China<br>Aug, 2023</p>
-  <p>It was a great honor to organize and attend the 1st Tsinghua Global Youth Dialogue, which strengthened my belief in the power of youth-led dialogues to address global challenges and create sustainable partnerships among youth.</p>
-  <div class="program-images">
-    <div class="image-item">
-      <img src="/images/TGYD-1.jpg" alt="TGYD Image 1" class="program-image">
-      <p>Description for image 1.</p>
+  <div class="program">
+    <h3>Core-organizer at 1st Tsinghua Global Youth Dialogue</h3>
+    <p>Location: Shenzhen-Chengdu-Beijing, China</p>
+    <p>Date: Aug, 2023</p>
+    <p>Feeling: Honored to organize and engage global youth in dialogue, realizing the importance of youth-driven solutions for global challenges.</p>
+    <div class="image-row">
+      <img src="/images/TGYD-1.jpg" alt="TGYD Image 1">
+      <img src="/images/TGYD-2.jpg" alt="TGYD Image 2">
     </div>
-    <div class="image-item">
-      <img src="/images/TGYD-2.jpg" alt="TGYD Image 2" class="program-image">
-      <p>Description for image 2.</p>
-    </div>
+    <p>Description 1</p>
+    <p>Description 2</p>
   </div>
 
-  <!-- Program 5: Entrepreneurship Bootcamp HKUST -->
-  <h3>Participant at Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology (HKUST)</h3>
-  <p style="float: right;">Hong Kong, China<br>Jul, 2023</p>
-  <p>This bootcamp was incredibly meaningful, providing valuable courses, insights into the Hong Kong startup environment, and lasting connections with other participants.</p>
-  <div class="program-images">
-    <div class="image-item">
-      <img src="/images/HKUST-1.jpg" alt="HKUST Image 1" class="program-image">
-      <p>Description for image 1.</p>
+  <div class="program">
+    <h3>Participant at Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology (HKUST)</h3>
+    <p>Location: Hong Kong, China</p>
+    <p>Date: Jul, 2023</p>
+    <p>Feeling: Gained new insights into entrepreneurship, startup culture, and the value of mind collisions with fellow participants.</p>
+    <div class="image-row">
+      <img src="/images/HKUST-1.jpg" alt="HKUST Image 1">
+      <img src="/images/HKUST-2.jpg" alt="HKUST Image 2">
     </div>
-    <div class="image-item">
-      <img src="/images/HKUST-2.jpg" alt="HKUST Image 2" class="program-image">
-      <p>Description for image 2.</p>
-    </div>
+    <p>Description 1</p>
+    <p>Description 2</p>
   </div>
 
-  <!-- Program 6: Academic Exchange to University of Auckland -->
-  <h3>Academic Exchange to University of Auckland</h3>
-  <p style="float: right;">Auckland, New Zealand<br>Nov, 2019</p>
-  <p>During this exchange, I explored new research areas and experienced New Zealand's academic environment and culture.</p>
-  <div class="program-images">
-    <div class="image-item">
-      <img src="/images/UniversityofAuckland-1.jpg" alt="University of Auckland Image 1" class="program-image">
-      <p>Description for image 1.</p>
+  <div class="program">
+    <h3>Academic Exchange to University of Auckland</h3>
+    <p>Location: Auckland, New Zealand</p>
+    <p>Date: Nov, 2019</p>
+    <p>Feeling: Experienced a diverse academic and cultural environment, expanding my understanding of global education systems.</p>
+    <div class="image-row">
+      <img src="/images/UniversityofAuckland-1.jpg" alt="Auckland Image 1">
+      <img src="/images/UniversityofAuckland-2.jpg" alt="Auckland Image 2">
     </div>
-    <div class="image-item">
-      <img src="/images/UniversityofAuckland-2.jpg" alt="University of Auckland Image 2" class="program-image">
-      <p>Description for image 2.</p>
-    </div>
+    <p>Description 1</p>
+    <p>Description 2</p>
   </div>
-
 </div>
 
 <style>
-  .program-section {
-    margin-bottom: 40px;
-  }
-
-  .program-images {
+  .global-grid {
     display: flex;
-    gap: 20px;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .program {
+    text-align: left;
+  }
+
+  .image-row {
+    display: flex;
     justify-content: space-between;
+    gap: 15px;
   }
 
-  .image-item {
-    flex: 1;
-    text-align: center;
-  }
-
-  .program-image {
-    width: 100%;
-    max-width: 400px;
-    height: auto;
-  }
-
-  .global-engagement h3 {
-    margin-bottom: 10px;
-  }
-
-  .global-engagement p {
-    margin-bottom: 20px;
+  .image-row img {
+    width: 48%;
   }
 </style>
