--- a/_pages/global.html
+++ b/_pages/global.html
@@ -10,80 +10,98 @@ author_profile: true
 <div class="global-grid">
   <div class="program">
     <h3>Academic Exchange to Institute of Machine Tools and Factory Management (IWF), Technische Universität Berlin (TUB) and Fraunhofer IPK</h3>
-    <p>Location: Berlin, Germany</p>
-    <p>Date: Aug, 2024</p>
-    <p>Feeling: Learned about advanced manufacturing techniques such as additive manufacturing and robotic machining, and gained insight into Germany’s industrial and academic landscape.</p>
-    <div class="image-row">
-      <img src="/images/TUB-1.jpg" alt="TUB Image 1">
-      <img src="/images/TUB-2.jpg" alt="TUB Image 2">
+    <p><em>Berlin, Germany</em><br>Aug, 2024</p>
+    <p>Learned about advanced manufacturing techniques such as additive manufacturing and robotic machining, and gained insight into Germany’s industrial and academic landscape.</p>
+    <div class="program-images">
+      <div class="image-item">
+        <img src="/images/TUB-1.jpg" alt="TUB Image 1" class="program-image">
+        <p>Short description of image 1.</p>
+      </div>
+      <div class="image-item">
+        <img src="/images/TUB-2.jpg" alt="TUB Image 2" class="program-image">
+        <p>Short description of image 2.</p>
+      </div>
     </div>
-    <p>Description 1</p>
-    <p>Description 2</p>
   </div>
 
   <div class="program">
     <h3>Delegate at Yenching Global Symposium 2024 (YGS 2024)</h3>
-    <p>Location: Beijing, China</p>
-    <p>Date: Apr, 2024</p>
-    <p>Feeling: Discussed global issues such as climate change and technological innovation, focusing on sustainable futures and inclusive development.</p>
-    <div class="image-row">
-      <img src="/images/YGS-1.jpg" alt="YGS Image 1">
-      <img src="/images/YGS-2.jpg" alt="YGS Image 2">
+    <p><em>Beijing, China</em><br>Apr, 2024</p>
+    <p>Discussed global issues such as climate change and technological innovation, focusing on sustainable futures and inclusive development.</p>
+    <div class="program-images">
+      <div class="image-item">
+        <img src="/images/YGS-1.jpg" alt="YGS Image 1" class="program-image">
+        <p>Short description of image 1.</p>
+      </div>
+      <div class="image-item">
+        <img src="/images/YGS-2.jpg" alt="YGS Image 2" class="program-image">
+        <p>Short description of image 2.</p>
+      </div>
     </div>
-    <p>Description 1</p>
-    <p>Description 2</p>
   </div>
 
   <div class="program">
     <h3>Delegate at Global Youth Conference Dubai 2023</h3>
-    <p>Location: Dubai, UAE</p>
-    <p>Date: Dec, 2023</p>
-    <p>Feeling: Engaged in inspiring discussions on youth leadership for climate action with global peers.</p>
-    <div class="image-row">
-      <img src="/images/Dubai-1.jpg" alt="Dubai Image 1">
-      <img src="/images/Dubai-2.jpg" alt="Dubai Image 2">
+    <p><em>Dubai, UAE</em><br>Dec, 2023</p>
+    <p>Had insightful discussions on empowering youth leadership for climate action.</p>
+    <div class="program-images">
+      <div class="image-item">
+        <img src="/images/Dubai-1.jpg" alt="Dubai Image 1" class="program-image">
+        <p>Short description of image 1.</p>
+      </div>
+      <div class="image-item">
+        <img src="/images/Dubai-2.jpg" alt="Dubai Image 2" class="program-image">
+        <p>Short description of image 2.</p>
+      </div>
     </div>
-    <p>Description 1</p>
-    <p>Description 2</p>
   </div>
 
   <div class="program">
     <h3>Core-organizer at 1st Tsinghua Global Youth Dialogue</h3>
-    <p>Location: Shenzhen-Chengdu-Beijing, China</p>
-    <p>Date: Aug, 2023</p>
-    <p>Feeling: Honored to organize and engage global youth in dialogue, realizing the importance of youth-driven solutions for global challenges.</p>
-    <div class="image-row">
-      <img src="/images/TGYD-1.jpg" alt="TGYD Image 1">
-      <img src="/images/TGYD-2.jpg" alt="TGYD Image 2">
+    <p><em>Shenzhen-Chengdu-Beijing, China</em><br>Aug, 2023</p>
+    <p>Engaged with global youths on pressing issues, realizing the importance of youth-led dialogues in addressing global challenges.</p>
+    <div class="program-images">
+      <div class="image-item">
+        <img src="/images/TGYD-1.jpg" alt="TGYD Image 1" class="program-image">
+        <p>Short description of image 1.</p>
+      </div>
+      <div class="image-item">
+        <img src="/images/TGYD-2.jpg" alt="TGYD Image 2" class="program-image">
+        <p>Short description of image 2.</p>
+      </div>
     </div>
-    <p>Description 1</p>
-    <p>Description 2</p>
   </div>
 
   <div class="program">
     <h3>Participant at Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology (HKUST)</h3>
-    <p>Location: Hong Kong, China</p>
-    <p>Date: Jul, 2023</p>
-    <p>Feeling: Gained new insights into entrepreneurship, startup culture, and the value of mind collisions with fellow participants.</p>
-    <div class="image-row">
-      <img src="/images/HKUST-1.jpg" alt="HKUST Image 1">
-      <img src="/images/HKUST-2.jpg" alt="HKUST Image 2">
+    <p><em>Hong Kong, China</em><br>Jul, 2023</p>
+    <p>Attended meaningful sessions and engaged with the local startup environment.</p>
+    <div class="program-images">
+      <div class="image-item">
+        <img src="/images/HKUST-1.jpg" alt="HKUST Image 1" class="program-image">
+        <p>Short description of image 1.</p>
+      </div>
+      <div class="image-item">
+        <img src="/images/HKUST-2.jpg" alt="HKUST Image 2" class="program-image">
+        <p>Short description of image 2.</p>
+      </div>
     </div>
-    <p>Description 1</p>
-    <p>Description 2</p>
   </div>
 
   <div class="program">
     <h3>Academic Exchange to University of Auckland</h3>
-    <p>Location: Auckland, New Zealand</p>
-    <p>Date: Nov, 2019</p>
-    <p>Feeling: Experienced a diverse academic and cultural environment, expanding my understanding of global education systems.</p>
-    <div class="image-row">
-      <img src="/images/UniversityofAuckland-1.jpg" alt="Auckland Image 1">
-      <img src="/images/UniversityofAuckland-2.jpg" alt="Auckland Image 2">
+    <p><em>Auckland, New Zealand</em><br>Nov, 2019</p>
+    <p>Gained deep insight into the local academic culture and explored research opportunities.</p>
+    <div class="program-images">
+      <div class="image-item">
+        <img src="/images/UniversityofAuckland-1.jpg" alt="University of Auckland Image 1" class="program-image">
+        <p>Short description of image 1.</p>
+      </div>
+      <div class="image-item">
+        <img src="/images/UniversityofAuckland-2.jpg" alt="University of Auckland Image 2" class="program-image">
+        <p>Short description of image 2.</p>
+      </div>
     </div>
-    <p>Description 1</p>
-    <p>Description 2</p>
   </div>
 </div>
 
@@ -98,13 +116,19 @@ author_profile: true
     text-align: left;
   }
 
-  .image-row {
+  .program-images {
     display: flex;
-    justify-content: space-between;
     gap: 15px;
+    justify-content: space-between;
   }
 
-  .image-row img {
-    width: 48%;
+  .image-item {
+    flex: 1;
+  }
+
+  .program-image {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
   }
 </style>
