--- a/_pages/global.html
+++ b/_pages/global.html
@@ -5,6 +5,8 @@ permalink: /global/
 author_profile: true
 ---
 
+<p><strong>Motivated by a deep passion for global issues, I actively engage in various international dialogues, conferences, and symposiums, contributing to and learning from the global community on topics of innovation, sustainability, and leadership.</strong></p>
+
 {% include base_path %}
 
 <div class="global-grid">
