--- a/_pages/global.html
+++ b/_pages/global.html
@@ -11,98 +11,62 @@ author_profile: true
 
 <div class="global-grid">
   <div class="program">
-    <h3>Academic Exchange to Institute of Machine Tools and Factory Management (IWF), Technische Universität Berlin (TUB) and Fraunhofer IPK</h3>
+    <h3 class="program-title">Academic Exchange to Institute of Machine Tools and Factory Management (IWF), Technische Universität Berlin (TUB) and Fraunhofer IPK</h3>
     <p><em>Berlin, Germany</em><br>Aug, 2024</p>
-    <p>Learned about advanced manufacturing techniques such as additive manufacturing and robotic machining, and gained insight into Germany’s industrial and academic landscape.</p>
+    <p class="feeling-section">Learned about advanced manufacturing techniques such as additive manufacturing and robotic machining, and gained insight into Germany’s industrial and academic landscape.</p>
     <div class="program-images">
-      <div class="image-item">
-        <img src="/images/TUB-1.jpg" alt="TUB Image 1" class="program-image">
-        <p>Short description of image 1.</p>
-      </div>
-      <div class="image-item">
-        <img src="/images/TUB-2.jpg" alt="TUB Image 2" class="program-image">
-        <p>Short description of image 2.</p>
-      </div>
+      <img src="/images/TUB-1.jpg" alt="TUB Image 1" class="program-image">
+      <img src="/images/TUB-2.jpg" alt="TUB Image 2" class="program-image">
     </div>
   </div>
 
   <div class="program">
-    <h3>Delegate at Yenching Global Symposium 2024 (YGS 2024)</h3>
+    <h3 class="program-title">Delegate at Yenching Global Symposium 2024 (YGS 2024)</h3>
     <p><em>Beijing, China</em><br>Apr, 2024</p>
-    <p>Discussed global issues such as climate change and technological innovation, focusing on sustainable futures and inclusive development.</p>
+    <p class="feeling-section">Discussed global issues such as climate change and technological innovation, focusing on sustainable futures and inclusive development.</p>
     <div class="program-images">
-      <div class="image-item">
-        <img src="/images/YGS-1.jpg" alt="YGS Image 1" class="program-image">
-        <p>Short description of image 1.</p>
-      </div>
-      <div class="image-item">
-        <img src="/images/YGS-2.jpg" alt="YGS Image 2" class="program-image">
-        <p>Short description of image 2.</p>
-      </div>
+      <img src="/images/YGS-1.jpg" alt="YGS Image 1" class="program-image">
+      <img src="/images/YGS-2.jpg" alt="YGS Image 2" class="program-image">
     </div>
   </div>
 
   <div class="program">
-    <h3>Delegate at Global Youth Conference Dubai 2023</h3>
+    <h3 class="program-title">Delegate at Global Youth Conference Dubai 2023</h3>
     <p><em>Dubai, UAE</em><br>Dec, 2023</p>
-    <p>Had insightful discussions on empowering youth leadership for climate action.</p>
+    <p class="feeling-section">Had insightful discussions on empowering youth leadership for climate action.</p>
     <div class="program-images">
-      <div class="image-item">
-        <img src="/images/Dubai-1.jpg" alt="Dubai Image 1" class="program-image">
-        <p>Short description of image 1.</p>
-      </div>
-      <div class="image-item">
-        <img src="/images/Dubai-2.jpg" alt="Dubai Image 2" class="program-image">
-        <p>Short description of image 2.</p>
-      </div>
+      <img src="/images/Dubai-1.jpg" alt="Dubai Image 1" class="program-image">
+      <img src="/images/Dubai-2.jpg" alt="Dubai Image 2" class="program-image">
     </div>
   </div>
 
   <div class="program">
-    <h3>Core-organizer at 1st Tsinghua Global Youth Dialogue</h3>
+    <h3 class="program-title">Core-organizer at 1st Tsinghua Global Youth Dialogue</h3>
     <p><em>Shenzhen-Chengdu-Beijing, China</em><br>Aug, 2023</p>
-    <p>Engaged with global youths on pressing issues, realizing the importance of youth-led dialogues in addressing global challenges.</p>
+    <p class="feeling-section">Engaged with global youths on pressing issues, realizing the importance of youth-led dialogues in addressing global challenges.</p>
     <div class="program-images">
-      <div class="image-item">
-        <img src="/images/TGYD-1.jpg" alt="TGYD Image 1" class="program-image">
-        <p>Short description of image 1.</p>
-      </div>
-      <div class="image-item">
-        <img src="/images/TGYD-2.jpg" alt="TGYD Image 2" class="program-image">
-        <p>Short description of image 2.</p>
-      </div>
+      <img src="/images/TGYD-1.jpg" alt="TGYD Image 1" class="program-image">
+      <img src="/images/TGYD-2.jpg" alt="TGYD Image 2" class="program-image">
     </div>
   </div>
 
   <div class="program">
-    <h3>Participant at Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology (HKUST)</h3>
+    <h3 class="program-title">Participant at Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology (HKUST)</h3>
     <p><em>Hong Kong, China</em><br>Jul, 2023</p>
-    <p>Attended meaningful sessions and engaged with the local startup environment.</p>
+    <p class="feeling-section">Attended meaningful sessions and engaged with the local startup environment.</p>
     <div class="program-images">
-      <div class="image-item">
-        <img src="/images/HKUST-1.jpg" alt="HKUST Image 1" class="program-image">
-        <p>Short description of image 1.</p>
-      </div>
-      <div class="image-item">
-        <img src="/images/HKUST-2.jpg" alt="HKUST Image 2" class="program-image">
-        <p>Short description of image 2.</p>
-      </div>
+      <img src="/images/HKUST-1.jpg" alt="HKUST Image 1" class="program-image">
+      <img src="/images/HKUST-2.jpg" alt="HKUST Image 2" class="program-image">
     </div>
   </div>
 
   <div class="program">
-    <h3>Academic Exchange to University of Auckland</h3>
+    <h3 class="program-title">Academic Exchange to University of Auckland</h3>
     <p><em>Auckland, New Zealand</em><br>Nov, 2019</p>
-    <p>Gained deep insight into the local academic culture and explored research opportunities.</p>
+    <p class="feeling-section">Gained deep insight into the local academic culture and explored research opportunities.</p>
     <div class="program-images">
-      <div class="image-item">
-        <img src="/images/UniversityofAuckland-1.jpg" alt="University of Auckland Image 1" class="program-image">
-        <p>Short description of image 1.</p>
-      </div>
-      <div class="image-item">
-        <img src="/images/UniversityofAuckland-2.jpg" alt="University of Auckland Image 2" class="program-image">
-        <p>Short description of image 2.</p>
-      </div>
+      <img src="/images/UniversityofAuckland-1.jpg" alt="University of Auckland Image 1" class="program-image">
+      <img src="/images/UniversityofAuckland-2.jpg" alt="University of Auckland Image 2" class="program-image">
     </div>
   </div>
 </div>
@@ -111,26 +75,32 @@ author_profile: true
   .global-grid {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px; /* Narrowed the vertical space between sections */
   }
 
   .program {
     text-align: left;
+    margin-bottom: 10px; /* Reduced space between programs */
+  }
+
+  .program-title {
+    font-size: 1.5em; /* Increased the font size for the program titles */
+  }
+
+  .feeling-section {
+    font-family: "Georgia", serif; /* Special font for feeling section */
+    font-style: italic;
+    color: #555; /* Slightly muted color for emphasis */
   }
 
   .program-images {
     display: flex;
     gap: 15px;
-    justify-content: space-between;
-  }
-
-  .image-item {
-    flex: 1;
   }
 
   .program-image {
-    width: 100%;
-    max-width: 400px;
-    height: auto;
+    width: 48%; /* Consistent width for both images to ensure uniform size */
+    height: 250px; /* Fixed height for consistency */
+    object-fit: cover; /* Maintain aspect ratio, crop if necessary */
   }
 </style>
