--- a/_pages/global.html
+++ b/_pages/global.html
@@ -84,7 +84,7 @@ author_profile: true
   }
 
   .program-title {
-    font-size: 1.5em; /* Increased the font size for the program titles */
+    font-size: 1.3em; /* Increased the font size for the program titles */
   }
 
   .feeling-section {
@@ -103,4 +103,14 @@ author_profile: true
     height: 250px; /* Fixed height for consistency */
     object-fit: cover; /* Maintain aspect ratio, crop if necessary */
   }
+
+  .program h3 {
+    margin-bottom: 5px; /* Adjusts space between title and location */
+  }
+  
+  .program p em {
+    margin-top: 0; /* Adjusts space between title and location */
+  }
+
+  
 </style>
