--- a/_pages/global.html
+++ b/_pages/global.html
@@ -88,10 +88,11 @@ author_profile: true
   }
 
   .feeling-section {
-    font-family: "Georgia", serif; /* Special font for feeling section */
-    font-style: italic;
-    color: #555; /* Slightly muted color for emphasis */
+      font-family: "Georgia", serif; /* Special font for feeling section */
+      font-weight: bold; /* Make the font bold */
+      color: #555; /* Slightly muted color for emphasis */
   }
+
 
   .program-images {
     display: flex;
