--- a/_pages/global.html
+++ b/_pages/global.html
@@ -5,7 +5,7 @@ permalink: /global/
 author_profile: true
 ---
 
-<p><strong>Motivated by a deep passion for global issues, I actively engage in various international dialogues, conferences, and symposiums, contributing to and learning from the global community on topics of innovation, sustainability, and leadership.</strong></p>
+<p class="intro-text"><strong>Motivated by a deep passion for global issues, I actively engage in various international dialogues, conferences, and symposiums, contributing to and learning from the global community on topics of innovation, sustainability, and leadership.</strong></p>
 
 {% include base_path %}
 
@@ -106,11 +106,19 @@ author_profile: true
   }
 
   .program h3 {
-    margin-bottom: 5px; /* Adjusts space between title and location */
+    margin-bottom: 2px; /* Adjusts space between title and location */
   }
   
   .program p em {
     margin-top: 0; /* Adjusts space between title and location */
+  }
+
+  .intro-text {
+      margin-bottom: 10px; /* Adjust this value to control the space between the intro and the first title */
+  }
+  
+  .program-title {
+      margin-top: 5px; /* Adjust the space between the title and any text before it */
   }
 
   
