--- a/_pages/global.html
+++ b/_pages/global.html
@@ -5,7 +5,7 @@ permalink: /global/
 author_profile: true
 ---
 
-<p class="intro-text"><strong>Motivated by a deep passion for global issues, I actively engage in various international dialogues, conferences, and symposiums, contributing to and learning from the global community on topics of innovation, sustainability, and leadership.</strong></p>
+<p class="intro-text"><strong>In the face of critical global challenges like energy exhaustion, population growth, climate change, and AI and data security, my past education and Societal Mission inspire a deep sense of responsibility to propose positive change for the betterment of humanity. To achieve this, I go beyond technical skills by engaging in international discussions, gaining insight into pressing global issues, and exploring solutions I can actively contribute to. At the same time, I strive to cultivate leadership and integrity in every step of this journey.</strong></p>
 
 {% include base_path %}
 
@@ -106,7 +106,7 @@ author_profile: true
   }
 
   .program h3 {
-    margin-bottom: 2px; /* Adjusts space between title and location */
+    margin-bottom: 1px; /* Adjusts space between title and location */
   }
   
   .program p em {
@@ -118,7 +118,7 @@ author_profile: true
   }
   
   .program-title {
-      margin-top: 5px; /* Adjust the space between the title and any text before it */
+      margin-top: 10px; /* Adjust the space between the title and any text before it */
   }
 
   
