--- a/_pages/global.html
+++ b/_pages/global.html
@@ -5,7 +5,7 @@ permalink: /global/
 author_profile: true
 ---
 
-<p class="intro-text"><strong>In the face of critical global challenges like energy exhaustion, population growth, climate change, and AI and data security, my past education and Societal Mission inspire a deep sense of responsibility to propose positive change for the betterment of humanity. To achieve this, I go beyond technical skills by engaging in international discussions, gaining insight into pressing global issues, and exploring solutions I can actively contribute to. At the same time, I strive to cultivate leadership and integrity in every step of this journey.</strong></p>
+<p class="intro-text"><strong>Facing global challenges such as energy depletion, climate change, and AI ethics, my education instills a profound sense of responsibility to act for the greater good. To fulfill this mission, I seek more than technical expertise by engaging in global dialogues, deepening my understanding of humanity's most pressing issues, and exploring meaningful solutions.</strong></p>
 
 {% include base_path %}
 
