--- a/_pages/global.html
+++ b/_pages/global.html
@@ -5,7 +5,7 @@ permalink: /global/
 author_profile: true
 ---
 
-<p class="intro-text"><strong>Facing global challenges such as energy depletion, climate change, and AI ethics, my education instills a profound sense of responsibility to act for the greater good. To fulfill this mission, I seek more than technical expertise by engaging in global dialogues, deepening my understanding of humanity's most pressing issues, and exploring meaningful solutions.</strong></p>
+<p class="intro-text"><strong>Facing global challenges such as energy exhaustion, climate change, and AI ethics, my education instills a profound sense of responsibility to act for the greater good. To fulfill this mission, I seek more than technical expertise by engaging in international discussions, deepening my understanding of humanity's most pressing issues, and exploring meaningful solutions.</strong></p>
 
 {% include base_path %}
 
