--- a/_pages/global.html
+++ b/_pages/global.html
@@ -80,13 +80,18 @@ author_profile: true
 
   .program {
     text-align: left;
-    margin-bottom: 10px; /* Reduced space between programs */
+    margin-bottom: 15px; /* Reduced space between programs */
   }
 
   .program-title {
-    font-size: 1.3em; /* Increased the font size for the program titles */
+      font-size: 1.3em; /* Font size for the program titles */
+      margin-bottom: 3px; /* Controls space between title and location */
   }
 
+  .program p {
+    margin-bottom: 3px; /* Controls space between date and feeling */
+  }
+  
   .feeling-section {
       font-family: "Georgia", serif; /* Special font for feeling section */
       font-weight: bold; /* Make the font bold */
@@ -105,17 +110,14 @@ author_profile: true
     object-fit: cover; /* Maintain aspect ratio, crop if necessary */
   }
 
-  .program h3 {
-    margin-bottom: 1px; /* Adjusts space between title and location */
+  .intro-text {
+      margin-bottom: 15px;
+      margin-bottom: 15px; /* Controls the space between the introduction and the first title */
   }
   
-  .program p em {
-    margin-top: 0; /* Adjusts space between title and location */
-  }
+  
 
-  .intro-text {
-      margin-bottom: 10px; /* Adjust this value to control the space between the intro and the first title */
-  }
+
   
   .program-title {
       margin-top: 10px; /* Adjust the space between the title and any text before it */
